added mouse support for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,9 @@
 
 # mouse support
 set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # powerline support
 source "/usr/share/tmux/powerline.conf"
