--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,3 +53,18 @@ set -g set-titles on
 
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux: #W"
+
+# appearance
+set -g pane-border-fg blue
+set -g pane-active-border-fg yellow
+set -g pane-active-border-bg default
+
+# clipboard
+set-option -s set-clipboard on
+
+# split windows with | and -
+bind | split-window -h
+bind - split-window -v
+
+#disable automatic renaming
+set-option -g allow-rename off
