added maximize and minimize shortcuts

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,5 +66,8 @@ set-option -s set-clipboard on
 bind | split-window -h
 bind - split-window -v
 
-#disable automatic renaming
-set-option -g allow-rename off
+#maximizing and restoring panes.
+unbind +
+bind + new-window -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
+unbind -
+bind - last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
