fixed vertical split

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,7 +64,7 @@ set-option -s set-clipboard on
 
 # split windows with | and -
 bind | split-window -h
-bind - split-window -v
+bind _ split-window -v
 
 #maximizing and restoring panes.
 unbind +
