fix support for clipboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,6 +61,8 @@ set -g pane-active-border-bg default
 
 # clipboard
 set-option -s set-clipboard on
+# we always copy and paste with system clipboard, also in vim
+bind-key -t vi-copy y copy-pipe "xclip -in -selection clipboard"
 
 # split windows with | and -
 bind | split-window -h
