tmux tab positioning

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,10 @@ bind-key b set-option status
 bind-key -n C-right next
 bind-key -n C-left prev
 
+# reposition windows with ctrl+shift left/right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 # open a man page in new window
 bind / command-prompt "split-window 'exec man %%'"
 
