add indices update to tmux tabs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,6 +52,9 @@ set -g display-panes-time 2000
 # start window indexing at one instead of zero
 set -g base-index 1
 
+# update indices when tab is closed
+set-option -g renumber-windows on
+
 # enable wm window titles
 set -g set-titles on
 
